# ats-resume-analyzer

./: .gitignore  .replit  LICENSE  README.md  main.py  pyproject.toml  replit.nix
.streamlit/: config.toml
assets/: style.css
utils/: ats_analyzer.py  file_parser.py  job_crawler.py  line_analyzer.py  linkedin_auth.py  ml_scorer.py  pdf_generator.py  role_extractor.py  visualizer.py
