[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.3",
    "nltk>=3.9.1",
    "numpy>=2.2.3",
    "pandas>=2.2.3",
    "plotly>=6.0.0",
    "pypdf2>=3.0.1",
    "python-docx>=1.1.2",
    "reportlab>=4.3.1",
    "requests>=2.32.3",
    "requests-oauthlib>=2.0.0",
    "scikit-learn>=1.6.1",
    "streamlit>=1.43.0",
    "trafilatura>=2.0.0",
]
